# GenesisCubeEngineProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
ConsoleTest/: CMakeLists.txt  Main.cpp
GenesisCubeBase/: CMakeLists.txt
GenesisCubeBase/Core/: Debug.cpp  Debug.h  FCore.cpp  FCore.h  FFormatter.cpp  FFormatter.h  FTimer.cpp  FTimer.h  GenesisCubeDef.cpp  GenesisCubeDef.h  Header.h  TEvent.cpp  TEvent.h  TPtr.cpp  TPtr.h
GenesisCubeBase/Exception/: EException.cpp  EException.h  Exception.cpp  Exception.h
GenesisCubeBase/IO/: IReader.cpp  IReader.h
GenesisCubeBase/Json/: FJsonReader.cpp  FJsonReader.h  JArray.cpp  JArray.h  JObject.cpp  JObject.h  Json.cpp  Json.h  JsonGetter.cpp  JsonGetter.h  JsonReader.cpp  JsonReader.h
GenesisCubeBase/Object/: GBool.h  GFloat.cpp  GFloat.h  GInteger.h  GNull.h  GObject.cpp  GObject.h  GString.cpp  GString.h
GenesisCubeBase/Win32/: Core.cpp  Core.h  File.cpp  File.h  MessageBox.cpp  MessageBox.h  Win32.h  Window.cpp  Window.h
GenesisCubeEngine/: CMakeLists.txt
GenesisCubeEngine/Core/: Core.cpp  Core.h  Debug.cpp  Debug.h  FCore.cpp  FCore.h  FFormatter.cpp  FFormatter.h  FLocator.cpp  FLocator.h  FTimer.cpp  FTimer.h  GenesisCubeEngine.h  Header.h  TEvent.cpp  TEvent.h  TPtr.cpp  TPtr.h  WinMain.h  stb_image.h
GenesisCubeEngine/Debug/: Debug.cpp  Debug.h
GenesisCubeEngine/DirectX/: FD2D1Helpers.cpp  FD2D1Helpers.h  FDWriteHelpers.cpp  FDWriteHelpers.h  FDXGIHelpers.cpp  FDXGIHelpers.h  FResult.cpp  FResult.h  GD2D1Bitmap.cpp  GD2D1Bitmap.h  GD2D1BitmapBrush.cpp  GD2D1BitmapBrush.h  GD2D1Brush.cpp  GD2D1Brush.h  GD2D1Device.cpp  GD2D1Device.h  GD2D1Factory.cpp  GD2D1Factory.h  GD2D1HwndRenderTarget.cpp  GD2D1HwndRenderTarget.h  GD2D1RenderTarget.cpp  GD2D1RenderTarget.h  GD2D1SolidColorBrush.cpp  GD2D1SolidColorBrush.h  GD2DFactory.cpp  GD2DFactory.h  GDWriteFactory.cpp  GDWriteFactory.h  GDWriteTextFormat.cpp  GDWriteTextFormat.h  GDXGIAdapter.cpp  GDXGIAdapter.h  GDXGIDevice.cpp  GDXGIDevice.h  GDXGIFactory.cpp  GDXGIFactory.h  GDXGISwapChain.cpp  GDXGISwapChain.h  GDepthStencilView.cpp  GDepthStencilView.h  (+10 more)
GenesisCubeEngine/DoNotInclude/: stb_image.h
GenesisCubeEngine/Exception/: EException.cpp  EException.h  Exception.cpp  Exception.h  GException.cpp  GException.h
GenesisCubeEngine/Game/: FWindow.cpp  FWindow.h  GBox.cpp  GBox.h  GHook.cpp  GHook.h  GUI.cpp  GUI.h  GUIVector.cpp  GUIVector.h  GWindow.cpp  GWindow.h
GenesisCubeEngine/Helpers/: Helpers.cpp  Helpers.h
GenesisCubeEngine/IO/: FImageData.cpp  FImageData.h  GDirectory.cpp  GDirectory.h  GDirectoryName.cpp  GDirectoryName.h  GFile.cpp  GFile.h  GFileName.cpp  GFileName.h  IReader.h  IWriter.h
GenesisCubeEngine/Includes/: stb_image.h  std_image.cpp
GenesisCubeEngine/JSON/: JArray.cpp  JArray.h  JObject.cpp  JObject.h  Json.cpp  Json.h  JsonReader.cpp  JsonReader.h  JsonWriter.cpp  JsonWriter.h
GenesisCubeEngine/Language/: LRunner.cpp  LRunner.h
GenesisCubeEngine/Localization/: Localization.cpp  Localization.h
GenesisCubeEngine/Object/: GBool.cpp  GBool.h  GFloat.h  GInteger.cpp  GInteger.h  GNull.cpp  GNull.h  GObject.cpp  GObject.h  GString.cpp  GString.h
GenesisCubeEngine/Resource/: GenesisCubeEngineIcon.psd  RCa16536  reource.rc  resource.h  resource.rc
GenesisCubeEngine/Resource/Cursor/: Cursor.cur  UI_Img_Cursor.cur  UI_Img_Cursor_PC.cur  main.cur
GenesisCubeEngine/Resource/Json/: CommandSchema.json  languageSchema.json
GenesisCubeEngine/UI/: FCanvas.cpp  FCanvas.h  PCanvas.cpp  PCanvas.h  PEllipse.cpp  PEllipse.h  PRect.cpp  PRect.h  UEllipse.cpp  UEllipse.h  UText.cpp  UText.h  UUI.cpp  UUI.h
GenesisCubeLanguage/: CMakeLists.txt
GenesisCubeLanguage/AST/: AST.h  ExpressionStatement.cpp  ExpressionStatement.h  Float.cpp  Float.h  Function.cpp  Function.h  Identifier.cpp  Identifier.h  Infix.cpp  Infix.h  Integer.cpp  Integer.h  Node.cpp  Node.h  Program.cpp  Program.h  String.cpp  String.h
GenesisCubeLanguage/Lexer/: Lexer.cpp  Lexer.h
GenesisCubeLanguage/Object/: Object.cpp  Object.h
GenesisCubeLanguage/Parser/: ParseExpression.cpp  ParseExpressionStatement.cpp  ParseGroup.cpp  ParseInfix.cpp  ParseInteger.cpp  ParseProgram.cpp  ParseStatement.cpp  Parser.cpp  Parser.h
GenesisCubeLanguage/Token/: AssignOperators.cpp  AssignOperators.h  Brackets.cpp  Brackets.h  ComparisonOperators.cpp  ComparisonOperators.h  LogicalOperators.cpp  LogicalOperators.h  Operators.cpp  Operators.h  ShiftOperators.cpp  ShiftOperators.h  Token.cpp  Token.h  Tokens.cpp  Tokens.h  Types.cpp  Types.h
Simple/: CMakeLists.txt
Simple/ConsoleTest/: CMakeLists.txt  Main.cpp
Simple/ConsoleTest/Resource/: test.c
Simple/test/: CMakeLists.txt
Simple/test/Resource/: data.json  en_us.json  languageSchema.json  language_debug.json  zh_cn.json
Simple/test/Resource/languages/: en_us.json  zh_cn.json
Simple/test/Source/: Game.cpp  Game.h  Main.cpp  Main.h
test/: CMakeLists.txt
test/Resource/: Test.json  Test.rc  en_us.json  language_debug.json  resource.h  zh_cn.json
test/Source/: Main.cpp  Main.h
